3-apps/rancher/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.rancher.russellhost.org`)
      kind: Rule
      services:
        - name: rancher
          port: 80
    - match: Host(`rancher.russellhost.org`)
      kind: Rule
      services:
        - name: rancher
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
